# my-software

./: .gitignore  .inputrc  .tmux.conf  AGENTS.md  BASH_COMPLETION.md  CLAUDE.md  DONE.md  ENVIRONMENT_REPORT.md  MACOS_SETUP.md  README.md  build-jetbrains-settings.sh  my-color-palette.md
Formula/: markdown-code-fence-reader.rb  my-idea-light-edit.rb  my-node@20.rb  my-node@23.rb  my-node@24.rb  my-nushell.rb  my-open-jdk@11.rb  my-open-jdk@17.rb  my-open-jdk@21.rb  my-open-jdk@22.rb  my-open-jdk@23.rb  my-open-jdk@24.rb  my-open-jdk@25.rb  my-open-jdk@26.rb  my-open-jdk@27.rb  my-open-jdk@8.rb  my-temurin-open-jdk-17.rb
atuin/: config.toml
backstage/: README.md  deduplicator-plan.md  done.md  sa-is-plan.md  wish-list.md
bash/: .bash_profile  BASH_COMPLETION.md  README.md  bash-aliases.bash  bash-aliases.sh  bash-atuin-dynamic-late.bash  bash-completion.bash  bash-env-early.bash  bash-fnm-dynamic.bash  bash-functions.bash  bash-functions.sh  bash-fzf.bash  bash-github-copilot-dynamic-late.bash  bash-homebrew-dynamic-early.bash  bash-iterm.bash  bash-nvm.bash  bash-sdkman-late.bash  bash-starship-dynamic.bash  bashrc-bundler.pl  sync-homebrew-managed-bash-completions.pl
claude/: CLAUDE.user.md  README.md
dev-box/: README.md  do.nu
dev-box-2/: README.md  do.nu
docker/: README.md  do.nu  my-nushell.Dockerfile
docs/: my-color-palette.html
ghostty/: config  high-contrast-xterm-16-colors.py  high-contrast-xterm-256-colors.py  my-high-contrast-light-theme  my-theme
go/: .gitignore  README.md  do.nu  go.mod  go.sum  my-launcher-schema.json  my-node-launcher-schema.json
hammerspoon/: init.lua
homebrew/: README.md  adoptium.http  do.nu  node.http
iterm2/: ITERM2_TIPS.md  com.googlecode.iterm2.plist
java/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
javascript/: README.md  do.nu  package-json.mjs  package-lock.json  webpack.config.mjs
jetbrains/: README.md  idea-light-edit.nu  zip-settings.sh
karabiner/: README.md  do.nu  karabiner.json
karabiner-elements/: karabiner.json
llm-agent/: AGENT.md  CLAUDE.md  COPILOT_START_HERE.instructions.md  README.md
mac-os/: MACOS_SETUP.md  README.md  dgroomes.symlink-git-completion.plist  do.nu
markdownlint/: .markdownlint-cli.yml  .markdownlint-cli2.jsonc
mcp/: README.md  do.nu  my-mcp-launcher.sh  my-mcp.nu  time-launcher.nu  time-launcher.sh  wish-list-launcher.sh  (+1 more)
python/: README.md  pyproject.toml
python/claude-proxy/: README.md  pyproject.toml
python/claude-proxy/claude_proxy/: proxy.py
python/file-condenser/: README.md
python/text-condenser/: README.md  text-condenser.py
python/token-count/: README.md  pyproject.toml
python/token-count/token_count/: token_count.py
rust/my-fuzzy-finder/: Cargo.toml
rust/my-fuzzy-finder/src/: main.rs  matcher.rs
rust/nu-lex/: Cargo.toml  README.md
rust/nu-lex/src/: main.rs
rust/run-from-readme/: Cargo.toml
rust/run-from-readme/src/: main.rs
(+319 files in other folders)
