[tool.poetry]
name = "token_count"
version = "0.1.0"
description = "My LLM token counter"
authors = ["David Groomes <dwgroomes@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "~3.12"
tiktoken = "~0.7.0"


[tool.poetry.scripts]
token-count = "token_count.token_count:token_count"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
