[package]
name = "my-fuzzy-finder-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "my-fuzzy-finder-rs"
path = "src/main.rs"

[dependencies]
crossterm = { version = "0.28.1", features = ["use-dev-tty"] }
libc = "0.2"
my-fuzzy-finder-lib = { path = "../my-fuzzy-finder-lib" }
ratatui = "0.28.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
unicode-width = "0.2"
