[package]
name = "run-from-readme-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "run-from-readme-rs"
path = "src/main.rs"

[dependencies]
crossterm = { version = "0.28.1", features = ["use-dev-tty"] }
my-fuzzy-finder-lib = { path = "../my-fuzzy-finder-lib" }
pulldown-cmark = "0.13.3"
ratatui = "0.28.1"
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
unicode-width = "0.2.2"
